<resources>
    <string name="app_name">Recipe App</string>
    <string name="menuAll">All Recipes</string>
    <string name="menuSaved">Saved Recipes</string>
    <string name="menuBreakfast">Breakfast</string>
    <string name="menuLunch">Lunch</string>
    <string name="menuDinner">Dinner</string>
    <string name="menuDessert">Dessert</string>
    <string name="txtBananasFoster">Bananas Foster</string>
    <string name="txtCaramelPopcorn">Caramel Popcorn</string>
    <string name="txtChicken">Baked Chicken Tenders</string>
    <string name="txtCookies">Chocolate Chip Cookies</string>
    <string name="txtEggs">Scrambled Eggs</string>
    <string name="txtFries">Baked French Fries</string>
    <string name="txtGrilledCheese"><![CDATA[Apple & Bacon Grilled Cheese]]></string>
    <string name="txtMacaroni"><![CDATA[Macaroni & Cheese]]></string>
    <string name="txtOatmeal">Oatmeal</string>
    <string name="txtPancakes">Pancakes</string>
    <string name="txtPizza">Skillet Pizza</string>
    <string name="txtSandwich"><![CDATA[Sweet & Spicy Chicken Sandwich]]></string>
    <string name="btnBack">Back</string>
    <string name="btnSave">Save</string>
    <string-array name="txtBFIngredients">
        <item>1/4 cup butter</item>
        <item>2/3 cup dark brown sugar</item>
        <item>3 1/2 tablespoons rum</item>
        <item>1 1/2 teaspoons vanilla extract</item>
        <item>1/2 teaspoon ground cinnamon</item>
        <item>3 bananas, peeled and sliced lengthwise and crosswise</item>
        <item>1/4 cup coarsely chopped walnuts</item>
        <item>1 pint vanilla ice cream</item>
    </string-array>
    <string-array name="txtCPIngredients">
        <item>23 large marshmallows</item>
        <item>2 cups brown sugar</item>
        <item>1/4 cup light corn syrup</item>
        <item>1 cup butter</item>
        <item>1 teaspoon vanilla extract</item>
        <item>2 packages microwave popcorn, popped</item>
    </string-array>
    <string-array name="txtChIngredients">
        <item>Cooking spray</item>
        <item>1 large egg, beaten</item>
        <item>1 1/4 cups panko bread crumbs</item>
        <item>2 teaspoons garlic powder</item>
        <item>1 teaspoon onion powder</item>
        <item>1 teaspoon ground paprika</item>
        <item>1 teaspoon kosher salt</item>
        <item>1 teaspoon ground black pepper</item>
        <item>4 skinless, boneless chicken tenders, cunt into 1/2-inch strips lengthwise</item>
    </string-array>
    <string-array name="txtCoIngredients">
        <item>1 cup butter, softened</item>
        <item>1 cup white sugar</item>
        <item>1 cup paced brown sugar</item>
        <item>2 eggs</item>
        <item>2 teaspoons vanilla extract</item>
        <item>1 teaspoon baking soda</item>
        <item>2 teaspoons hot water</item>
        <item>1/2 teaspoon salt</item>
        <item>3 cups all-purpose flour</item>
        <item>2 cups semisweet chocolate chips</item>
        <item>1 cup chopped walnuts</item>
    </string-array>
    <string-array name="txtEgIngredients">
        <item>4 eggs</item>
        <item>1/4 cup milk</item>
        <item>1/8 teaspoon salt</item>
    </string-array>
    <string-array name="txtFrIngredients">
        <item>1 large baking potato</item>
        <item>1 tablespoon olive oil</item>
        <item>1/2 teaspoon paprika</item>
        <item>1/2 teaspoon garlic powder</item>
        <item>1/2 teaspoon chili powder</item>
        <item>1/2 teaspoon onion powder</item>
    </string-array>
    <string-array name="txtGCIngredients">
        <item>2 slices cracked wheat bread</item>
        <item>2 thin slices aged Cheddar cheese</item>
        <item>2 slices Honeycrisp apple, or more to taste</item>
        <item>2 cooked bacon strips</item>
    </string-array>
    <string-array name="txtMaIngredients">
        <item>1 box elbow macaroni</item>
        <item>1/4 cup butter</item>
        <item>1/4 cup all-purpose flour</item>
        <item>1/2 teaspoon salt</item>
        <item>ground black pepper to taste</item>
        <item>2 cups milk</item>
        <item>2 cups shredded Cheddar cheese</item>
    </string-array>
    <string-array name="txtOMIngredients">
        <item>1 1/2 cups water</item>
        <item>3/4 cup quick-cooking oats</item>
        <item>1 tablespoon packed dark brown sugar</item>
        <item>1 tablespoon maple syrup</item>
    </string-array>
    <string-array name="txtPCIngredients">
        <item>1 1/2 cups all-purpose flour</item>
        <item>3 1/2 teaspoons baking powder</item>
        <item>1 tablespoon white sugar</item>
        <item>1/4 teaspoon salt, or more to taste</item>
        <item>1 1/4 cups milk</item>
        <item>3 tablespoons butter, melted</item>
        <item>1 egg</item>
    </string-array>
    <string-array name="txtPiIngredients">
        <item>1 1/2 cups shredded part-skim mozzarella cheese</item>
        <item>5 cheery tomatoes, thinly sliced</item>
        <item>2 tablespoons torn fresh basil leaves</item>
        <item>4 small fresh mozzarella balls (bocconcini), thinly sliced</item>
    </string-array>
    <string-array name="txtSWIngredients">
        <item>2 slices (1/2 inch thick) hearty country bread</item>
        <item>4 slices roasted turkey breast</item>
        <item>1 slice pepperjack cheese</item>
        <item>2 teaspoons butter</item>
        <item>4 teaspoons strawberry preserves</item>
    </string-array>
    <string-array name="txtBFSteps">
        <item>Step 1: Melt butter in a large, deep skillet over medium heat. Stir in brown sugar, rum, vanilla, and cinnamon; bring to a low boil</item>
        <item>Step 2: Place bananas and walnuts in the pan. Cook until bananas have softened, 1 to 2 minutes. Serve at once over vanilla ice cream</item>
    </string-array>
    <string-array name="txtCPSteps">
        <item>Step 1: Cook and stir the marshmallows, brown sugar, corn syrup, butter, and vanilla extract together in a pot over medium-low heat until the marshmallows are completely melted, 5 to 7 minutes.</item>
        <item>Step 2: Put the popcorn in a large bowl; pour the marshmallow mixture over the popcorn and gently stir with a big spoon to coat.</item>
    </string-array>
    <string-array name="txtChSteps">
        <item>Step 1: Preheat oven to 450 degrees F. Line a baking sheet with aluminum foil and spray with cooking spray.</item>
        <item>Step 2: Place egg in shallow dish. Place panko, garlic powder, onion powder, paprika, salt, and pepper into a large zip-top freezer bag and mix well</item>
        <item>Step 3: Dip 2 chicken strips into egg, then place into panko mixture and shake to coat. Place coated chicken onto baking sheet and repeat with remaining chicken</item>
        <item>Step 4: Spray each chicken tender with cooking spray twice</item>
        <item>Step 5: Bake tenders in the preheated oven for 7 minutes. Flip and continue to bake on opposite side until no longer pink in the centers, about 7 minutes more. Remove from the oven</item>
        <item>Step 6: Set an oven rack about 6 inches from heat source and preheat the oven\'s broiler.</item>
        <item>Step 7: Broil tenders in the preheated oven for extra crunch, about 1 to 2 minutes more.</item>
        <item>Step 8: Serve hot and enjoy!</item>
    </string-array>
    <string-array name="txtCoSteps">
        <item>Step 1: Preheat the over to 350 degrees F</item>
        <item>Step 2: Beat butter, white sugar, and brown sugar with an electric mixer in a large bowl until smooth.</item>
        <item>Step 3: Beat in eggs, one at a time, then stir in vanilla</item>
        <item>Step 4: Dissolve baking soda in how water. Add to batter along with salt</item>
        <item>Step 5: Stir in flour, chocolate chips, and walnuts</item>
        <item>Step 6: Drop spoonfuls of dough 2 inches apart onto ungreased baking sheets</item>
        <item>Step 7: Bake in the preheated oven until edges are nicely browned, about 10 minutes</item>
        <item>Step 8: Cool on baking sheet briefly before removing to a wire rack to cool completely</item>
    </string-array>
    <string-array name="txtEgSteps">
        <item>Step 1: Break the eggs into a microwave-proof mixing bowl. Add milk and salt; mix well</item>
        <item>Step 2: Cook in the microwave on high power for 30 seconds. Remove bowl, beat eggs very well, scraping down the sides of the bowl, and return to the microwave for another 30 seconds</item>
        <item>Step 3: Repeat this pattern, stirring every 30 seconds for up to 2 1/2 minutes. Stop when eggs have the consistency you desire</item>
        <item>Step 4: Serve warm and enjoy!</item>
    </string-array>
    <string-array name="txtFrSteps">
        <item>Step 1: Preheat the oven to 450 degrees F</item>
        <item>Step 2: Cut potato into thick wedges. Mix olive oil, paprika, garlic powder, chili powder, and onion powder together in a medium bowl. Add potato wedges and toss to coat evenly; arrange on a baking sheet</item>
        <item>Step 3: Bake in the preheated oven, turning over once or twice, until golden brown and crispy, about 45 minutes</item>
    </string-array>
    <string-array name="txtGCSteps">
        <item>Step 1: Preheat a sandwich/panini press according to manufacturer\'s instructions</item>
        <item>Step 2: Set one slice of bread on a work surface. top bread with 1 slice cheese, apple slices, bacon slices, and remaining 1 slice cheese. Place remaining bread slice on top</item>
        <item>Step 3: Cook sandwich in the preheated panini press until bread is lightly toasted and cheese begins to melt, about 5 minutes</item>
    </string-array>
    <string-array name="txtMaSteps">
        <item>Step 1:Bring large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes</item>
        <item>Step 2: At the same time, melt butter in a saucepan over medium heat</item>
        <item>Step 3: Add flour, salt, and pepper and stir until smooth, about 5 minutes</item>
        <item>Step 4: Pour in milk slowly, while stirring continuously. continue to cook and stir until mixture is smooth and bubbling, about 5 minutes, making sure the milk doesn\'t burn</item>
        <item>Step 5: Add Cheddar cheese and stir until melted, 2 to 4 minutes</item>
        <item>Step 6: Drain macaroni and fold into cheese sauce until coated</item>
        <item>Step 7: Serve hot and enjoy!</item>
    </string-array>
    <string-array name="txtOMSteps">
        <item>Step 1: Bring water to a boil in a small pot. Add oats and cook, stirring, for 1 minute</item>
        <item>Step 2: Remove from heat and stir in brown sugar and maple syrup. Let sit until desired thickness is reached, 2 to 3 minutes</item>
    </string-array>
    <string-array name="txtPCSteps">
        <item>Step 1: Sift flour, baking powder, sugar, and salt together in a large bowl. make a well in the center and add milk, melted butter, and egg; mix until smooth</item>
        <item>Step 2: Heat a lightly oiled griddle or pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for eah pancake; cook until bublles form and the edges are dry, about 2 to 3 minutes. Flip and cook until browned on the other side. Repeat with remaining batter</item>
    </string-array>
</resources>